# scheduler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  scheduler.cpp
cpack/: CMakeLists.txt  cpack.cmake
include/: Scheduler.hpp  Task.hpp
sources/: Scheduler.cpp
tests/: CMakeLists.txt  test_scheduler.cpp  tests.cmake
